Ready to deploy on heroku

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/jpg" href="images/sce-logo.jpg" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -59,6 +60,10 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="jumbotron text-center text-white bg-info mt-4" style="margin-bottom:0">
+      <p>Copyright SCE 2020. Built By <a href="https://github.com/josumung999/" target="_blank">@josumung999</a></p>
     </div>
 
     <!-- Optional JavaScript -->
