Fixing some lexical issues

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="col-lg-6">
               <div class="card mb-2">
                 <div class="card-header text-mute">
-                  Prix pour les Non Membres Membres
+                  Prix pour les Non Membres
                 </div>
                 <div class="card-body">
                   <h2 class="text-info" id="non-member-price"></h2>
