Changed the Brand Name

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/jpg" href="images/sce-logo.jpg" />
+    <link rel="icon" type="image/jpg" href="images/bravo-logo.jpg" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -12,13 +12,13 @@
     <!-- Project files -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <title>SCE calculator</title>
+    <title>Convertisseur des Prix Bravo Shoppers</title>
   </head>
   <body>
     <div class="jumbotron jumbotron-fluid bg-info text-white">
       <div class="container text-center">
-        <img src="images/sce-logo.jpg" class="rounded-circle mb-4" alt="Logo Société de Construction de l'Equité" width="150" height="150"> 
-        <h1>SCE Calculator</h1>      
+        <img src="images/bravo-logo.jpg" class="rounded-circle mb-4" alt="Logo Société de Construction de l'Equité" width="150" height="150"> 
+        <h1>Bravo Shoppers Calculator</h1>      
         <p>Utilisez cette calculatrice pour convertir les prix</p>
       </div>
     </div>
@@ -63,7 +63,7 @@
     </div>
 
     <div class="jumbotron text-center text-white bg-info mt-4" style="margin-bottom:0">
-      <p>Copyright SCE 2020. Built By <a href="https://github.com/josumung999/" target="_blank">@josumung999</a></p>
+      <p>Copyright Bravo Shoppers 2020. Built By <a href="https://github.com/josumung999/" target="_blank" class="text-muted">@josumung999</a></p>
     </div>
 
     <!-- Optional JavaScript -->
