Changed the Calculator Name

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <!-- Project files -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <title>Convertisseur des Prix Bravo Shoppers</title>
+    <title>Bravo Calculator</title>
   </head>
   <body>
     <div class="jumbotron jumbotron-fluid bg-info text-white">
       <div class="container text-center">
         <img src="images/bravo-logo.jpg" class="rounded-circle mb-4" alt="Logo Société de Construction de l'Equité" width="150" height="150"> 
-        <h1>Bravo Shoppers Calculator</h1>      
+        <h1>Bravo Calculator</h1>      
         <p>Utilisez cette calculatrice pour convertir les prix</p>
       </div>
     </div>
